# ik-ggez

./: Cargo.toml
resources/: common1.cns  kfm720.cmd  kfm720.cns
src/: bytecode.rs  compiler.rs  compiler_functions.rs  ini.rs  main.rs  types.rs  utils.rs
src/debug/: mod.rs
src/game/: animation.rs  battle.rs  char.rs  input.rs  mod.rs  state_manager.rs
src/spec/: cmd.rs  cns.rs  controllers.rs  mod.rs  state.rs  triggers.rs
src/spec/constants/: char_constants.rs  mod.rs
src/spec/def/: char_def.rs  mod.rs
src/utils/: ini.rs  mod.rs  sprite_sheet.rs
