[package]
name = "ik-ggez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
sff-rs = { path = "C:\\Programming\\Rust\\ik-tests\\sff-rs" }
air-rs = { path = "C:\\Programming\\Rust\\ik-tests\\air-rs" }
ini_core = "0.2.0"
rust-ini = "0.19.0"
evalexpr = "11.1.0"
indexmap = "2.1.0"
regex = "1.10.2"